# ASOF

./: 404.html  README.md  hello.py  index.html  mkdocs.yml  pyproject.toml
.cursor/rules/: guia-desenvolvedor.mdc
.github/workflows/: ci.yml
ASOF/: mkdocs.yml  repomix-output.md
ASOF/docs/: index.md
ASOF/docs/FAQ/manuais/: PADIP.md
ASOF/site/: 404.html  index.html
ASOF/site/search/: search_index.json
FAQ/PADIP/: index.html
FAQ/manuais/PADIP/: index.html
FAQ/manuais/deploy/: index.html
Interno/: deploy.md
docs/: index.md
docs/about/: changelog.md  contributing.md  license.md
docs/api/: overview.md
docs/user-guide/: getting-started.md  introduction.md
manuais/deploy/: index.html
search/: search_index.json
src/asof/: __init__.py
