[project]
name = "asof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymdown-extensions>=10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asof"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "pytest>=7.4.4",
]
